--- a/Pipfile
+++ b/Pipfile
@@ -5,11 +5,11 @@ verify_ssl = true
 
 [dev-packages]
 pep8 = "*"
-v = {version = "*",editable = true}
 
 [packages]
 argparse = "*"
 docker = "*"
+requests = "*"
 
 [requires]
 python_version = "3.7"
