--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ argparse = "*"
 docker = "*"
 requests = "*"
 ons-platform-python-sdk = {editable = true,git = "https://github.com/onsplatform/platform_sdk.git"}
+pyyaml = "*"
 
 [requires]
 python_version = "3.7"
