--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ pep8 = "*"
 argparse = "*"
 docker = "*"
 requests = "*"
-ons-platform-python-sdk = {editable = true,git = "https://github.com/onsplatform/platform_sdk.git"}
+ons-platform-python-sdk = {editable = true, ref = "coreapi_integration",git = "https://github.com/onsplatform/platform_sdk.git"}
 pyyaml = "*"
 
 [requires]
